--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -15,6 +15,7 @@ $light-red: #ef3e45;
 $beige: #f3daae;
 $yellow: #febf01;
 $primary-color: #565acf;
+$secondary-color: #f17732;
 $red-orange: #f76d3c;
 $purple: #913ccd;
 $pink: #f15f74;
