--- a/src/components/Footer/footer.scss
+++ b/src/components/Footer/footer.scss
@@ -7,6 +7,7 @@
   font-size: 15px;
   background-size: cover;
   background: url("../../assets/img/footerbg.jpg") no-repeat 50%;
+
   &-top {
     padding: 200px 0 20px;
     .widget {
@@ -15,6 +16,7 @@
         max-width: 190px;
         margin-bottom: 25px;
       }
+
       .ft-contact {
         p {
           font-size: 16px;
@@ -22,6 +24,7 @@
           font-weight: 500;
           margin-bottom: 30px;
         }
+
         .contact {
           display: flex;
           align-items: center;
@@ -36,6 +39,7 @@
             line-height: 58px;
             text-align: center;
           }
+
           &-number {
             span {
               color: $secondary-color;
@@ -44,6 +48,7 @@
               font-weight: 600;
               display: block;
             }
+
             .number {
               color: #1f2278;
               margin-bottom: 0;
@@ -53,6 +58,7 @@
           }
         }
       }
+
       &__title {
         margin-bottom: 30px;
         position: relative;
@@ -72,6 +78,7 @@
           background-repeat: no-repeat;
         }
       }
+
       ul {
         a {
           font-size: 16px;
@@ -86,6 +93,7 @@
           }
         }
       }
+
       .subscribe-form {
         margin-bottom: 30px;
         .input-group {
@@ -105,6 +113,7 @@
             border: 1px solid transparent;
             padding: 15px 25px;
             @include transition-ease-in-out(0.3s);
+
             &:focus {
               box-shadow: none !important;
               border-color: $primary-color;
@@ -114,6 +123,7 @@
           }
         }
       }
+
       .footer-social {
         ul {
           margin: 0 -8px;
@@ -125,15 +135,16 @@
       }
     }
   }
+
   &-bottom {
+    text-align: center;
     .container {
       border-top: 1px solid #d4d5f1;
       padding: 25px 0;
       font-size: 15px;
     }
-
-    text-align: center;
   }
+
   &::after {
     content: "";
     background-image: url("../../assets/img/footer-bg-top.png");
@@ -147,26 +158,71 @@
     z-index: -1;
     background-position: 0 0;
   }
+
   .animate {
     position: absolute;
     user-select: none;
     z-index: -1;
   }
+
   .pt-img1 {
     top: 100px;
     left: 130px;
     z-index: 1;
   }
+
   .pt-img2 {
     bottom: 180px;
     left: 30px;
   }
+
   .pt-img3 {
     top: 180px;
     right: 40px;
   }
+
   .pt-img4 {
     bottom: 120px;
     right: 60px;
+  }
+}
+
+@media only screen and (max-width: 1380px) {
+  .footer {
+    &-top {
+      padding: 150px 0 0;
+    }
+  }
+}
+
+@media (max-width: 991px) {
+  .footer {
+    &-top {
+      padding: 120px 0 0;
+    }
+
+    .ml-50 {
+      margin-left: 0px !important;
+    }
+  }
+}
+
+@media (max-width: 767px) {
+  .footer {
+    &-top {
+      padding: 100px 0 0;
+    }
+
+    .animate {
+      display: none;
+    }
+  }
+}
+
+@media only screen and (max-width: 575px) {
+  .footer {
+    &-top {
+      padding: 70px 0 10px;
+    }
   }
 }
