--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -7,7 +7,22 @@
   justify-content: space-between;
   padding: 0px 30px 0px 30px;
   background: transparent;
+  &.is-fixed {
+    position: fixed;
+    width: 100%;
+    background-color: #fff;
+    top: 0;
+    @include keyframes(smoothScroll) {
+      0% {
+        transform: translateY(-150px);
+      }
 
+      100% {
+        transform: translateY(0px);
+      }
+    }
+    animation: smoothScroll 1s ease-in-out;
+  }
   &-left {
     .logo {
       display: flex;
