--- a/src/components/Footer/footer.scss
+++ b/src/components/Footer/footer.scss
@@ -67,16 +67,7 @@
         color: #1f2278;
         line-height: 1.3;
         font-weight: 700;
-        &::after {
-          content: "";
-          position: absolute;
-          bottom: 0;
-          left: 0;
-          width: 85px;
-          height: 7px;
-          background-image: url("../../assets/img/footer_bg_title.png");
-          background-repeat: no-repeat;
-        }
+        
       }
 
       ul {
@@ -121,6 +112,10 @@
               background: $white;
             }
           }
+        }
+
+        button {
+          width: 100%;
         }
       }
 
