--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -1,7 +1,8 @@
 @import "../../styles/mixin.scss";
 @import "../../styles/variables.scss";
 .header {
-  position: relative;
+  position: absolute;
+  width: 100%;
   z-index: 9999;
   display: flex;
   justify-content: space-between;
@@ -177,6 +178,9 @@
   &-right {
     display: flex;
     align-items: center;
+    width: 200px;
+    flex-direction: row-reverse;
+    justify-content: center;
     .header-login {
       text-align: center;
     }
