Add component Animation

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -157,6 +157,13 @@ button.back-to-top {
     transform: rotate(1turn);
   }
 }
+
+.animate {
+  position: absolute;
+  user-select: none;
+  z-index: -1;
+}
+
 .animate-wave {
   animation: left-right 1.5s infinite alternate;
 }
