--- a/src/pages/user/Home/home.scss
+++ b/src/pages/user/Home/home.scss
@@ -387,7 +387,7 @@
 .top-search {
   padding-top: 100px;
   padding-bottom: 70px;
-
+  position: relative;
   &-title {
     padding-bottom: 20px;
     text-align: center;
