Task 9 Detail Clinic Page Complete 80% ui 0% function

--- a/src/styles/layout/detailClinic.scss
+++ b/src/styles/layout/detailClinic.scss
@@ -13,6 +13,7 @@
     .info-content {
       .clinic-name {
         font-size: 40px;
+        font-weight: 700;
         margin-bottom: 20px;
         color: #1f2278;
         text-align: center;
@@ -157,6 +158,164 @@
 
     .slick-next {
       right: 120px;
+    }
+  }
+}
+
+.booking {
+  padding-top: 70px;
+  padding-bottom: 70px;
+  position: relative;
+
+  &__title {
+    text-align: center;
+    margin-bottom: 45px;
+
+    h6 {
+      background: url("../../assets/img/bg_title_2.png") repeat 50%;
+      display: inline-block;
+      font-weight: 700;
+      padding: 3px 15px;
+      margin-bottom: 15px;
+      color: $secondary-color;
+    }
+
+    h2 {
+      font-size: 45px;
+      color: #1f2278;
+      line-height: 1.3;
+      font-weight: 700;
+    }
+  }
+
+  &__container {
+    padding: 40px;
+    border: 2px solid $primary-color;
+    border-radius: 40px;
+
+    .ant-typography {
+      color: $primary-color;
+      display: flex;
+      width: 180px;
+      padding-left: 15px;
+      margin-bottom: 1em;
+    }
+
+    &--button {
+      width: 100%;
+      display: block;
+      margin: 0;
+      padding-top: 30px;
+      text-align: center;
+
+      button {
+        width: 150px;
+        height: 50px;
+        border: none;
+        outline: none;
+        color: #fff;
+        background: $primary-color;
+        cursor: pointer;
+        position: relative;
+        z-index: 1;
+        border-radius: 10px;
+
+        &:before {
+          content: "";
+          background: linear-gradient(
+            45deg,
+            #ff0000,
+            #ff7300,
+            #fffb00,
+            #48ff00,
+            #00ffd5,
+            #002bff,
+            #7a00ff,
+            #ff00c8,
+            #ff0000
+          );
+          position: absolute;
+          top: -2px;
+          left: -2px;
+          background-size: 400%;
+          z-index: -1;
+          filter: blur(5px);
+          width: calc(100% + 4px);
+          height: calc(100% + 4px);
+          animation: glowing 20s linear infinite;
+          opacity: 0;
+          transition: opacity 0.3s ease-in-out;
+          border-radius: 10px;
+        }
+
+        &:active {
+          color: #000;
+        }
+
+        &:active:after {
+          background: transparent;
+        }
+
+        &:hover:before {
+          opacity: 1;
+        }
+
+        &:after {
+          z-index: -1;
+          content: "";
+          position: absolute;
+          background: $primary-color;
+          width: 100%;
+          height: 100%;
+          left: 0;
+          top: 0;
+          border-radius: 10px;
+        }
+
+        @include keyframes(glowing) {
+          0% {
+            background-position: 0 0;
+          }
+          50% {
+            background-position: 400% 0;
+          }
+          100% {
+            background-position: 0 0;
+          }
+        }
+      }
+    }
+
+    &--date {
+      .ant-picker-calendar {
+        border: 2px solid rgba(86, 90, 207, 0.2);
+        padding: 10px 15px;
+
+        .ant-picker-panel {
+          border: 2px solid rgba(86, 90, 207, 0.2);
+          padding: 5px;
+
+          .ant-picker-body {
+            padding-bottom: 0px;
+
+            .ant-picker-cell-disabled.ant-picker-cell-selected {
+              div {
+                color: unset;
+                background-color: unset;
+              }
+            }
+          }
+        }
+      }
+    }
+
+    &--time {
+      .time-slot-item {
+        display: flex;
+        align-items: center;
+        padding-bottom: 10px;
+        padding-left: 20px;
+      }
     }
   }
 }
