--- a/src/styles/common/timeSlotRadioGroup.scss
+++ b/src/styles/common/timeSlotRadioGroup.scss
@@ -8,7 +8,8 @@
   position: relative;
   margin-right: 10px;
   outline: none;
-  background-color: #ccc;
+  background-color: #dee6f5;
+  border: 1px solid $primary-color;
 
   &:checked {
     &::before {
@@ -23,6 +24,8 @@
     color: #fff;
     background-color: #007bff;
     position: absolute;
+    top: -1px;
+    left: -1px;
     width: 20px;
     height: 20px;
     text-align: center;
