--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -10,7 +10,7 @@
 @import "layout/breadcrumb";
 @import "layout/header";
 @import "layout/footer";
-@import "layout/aboutUs";
+@import "page/aboutUs";
 @import "page/home";
 @import "page/login";
 @import "page/detailClinic";
