Task 10 Clinic Page

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -17,6 +17,7 @@
 @import "page/profile";
 @import "common/timeSlotRadioGroup";
 @import 'react-toastify/dist/ReactToastify.css';
+@import "page/clinic";
 .App{
   position: relative;
 
