feat: add feature change password

--- a/src/styles/page/profile.scss
+++ b/src/styles/page/profile.scss
@@ -77,6 +77,7 @@
     }
   }
 }
+
 .flexGender {
   display: flex;
   align-items: center;
@@ -84,6 +85,40 @@
   align-content: center;
   flex-wrap: wrap;
 }
+
 .gender {
   align-items: center;
+}
+
+.change__password--item {
+  display: flex;
+  align-items: center;
+  padding-bottom: 15px;
+
+  .input {
+    position: relative;
+    width: 80%;
+
+    .error {
+      position: absolute;
+      color: #ee4d2d;
+    }
+  }
+
+  label {
+    width: 170px;
+  }
+
+  input {
+    outline: none;
+    border-top: none;
+    border-left: none;
+    margin-bottom: 5px;
+  }
+
+}
+
+.btn-save {
+  margin-top: 20px;
+  padding: 10px 10px;
 }
